--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "@types/node": "^20.14.11",
     "typescript": "^5.5.4",
     "vitest": "^2.0.4"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.12"
   }
 }
