--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/node": "^20.14.11",
     "typescript": "^5.5.4",
+    "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.0.4"
   },
   "dependencies": {
